cmake_minimum_required(VERSION 3.12)
project(SWExpertAcademy)

set(CMAKE_CXX_STANDARD 17)

add_executable(SWExpertAcademy main.cpp 2394.cpp 6808.cpp 6781.cpp 6718.cpp 6782.cpp swimming_pool.cpp arrest.cpp repair_shop.cpp janghoon.cpp immigration.cpp program_test.cpp trackingCourse.cpp homeSecurity.cpp processor.cpp timeForLunch.cpp password.cpp)